# switchboardv2-rs

./: Cargo.toml  README.md
src/: aggregator.rs  decimal.rs  error.rs  history_buffer.rs  lib.rs  vrf.rs
src/structs/: account_type.rs  aggregator.rs  common.rs  decimal.rs  error.rs  mod.rs
