[package]
name = "switchboard-aggregator"
version = "0.1.0"
edition = "2021"
description = "A Rust library to interact with Switchboard V2 data feeds."
readme = "README.md"
keywords = ["switchboard", "oracle", "solana"]
homepage = "https://switchboard.xyz"
license = "MIT"
documentation = "https://docs.rs/switchboard-aggregator/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.18.0"
borsh = { version = "0.9.1", features = ["const-generics"] }
rust_decimal = { version = "1.15.0" }
solana-program = "1.7.9"
thiserror = "1.0.30"