[package]
name = "switchboard-aggregator"
version = "0.1.7"
edition = "2018"
description = "A Rust library to interact with Switchboard V2 data feeds."
readme = "README.md"
keywords = ["switchboard", "oracle", "solana"]
homepage = "https://switchboard.xyz"
repository = "https://github.com/switchboard-xyz/switchboard-aggregator"
license = "MIT"
documentation = "https://docs.rs/switchboard-aggregator/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.18.0"
borsh = { version = "0.9.1", features = ["const-generics"] }
rust_decimal = { version = "1.15.0" }
solana-program = "1.8.2"
bytemuck = "1.7.2"
